--- a/svelte/package.json
+++ b/svelte/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "bonk-site",
 	"version": "0.0.1",
-    "engines": {
-        "node": ">=18.13"
-    },
+	"engines": {
+		"node": ">=18.13"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^4.2.7",
+		"svelte-adapter-azure-swa": "^0.20.0",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
