Fix typo in api yaml

--- a/.github/workflows/main_bonk-api.yml
+++ b/.github/workflows/main_bonk-api.yml
@@ -16,9 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      -name: cd into API
-        run: |
-          cd api
+      - name: cd into API
+        run: cd api
 
       - name: Set up Python version
         uses: actions/setup-python@v1
