--- a/.github/workflows/main_bonk-api.yml
+++ b/.github/workflows/main_bonk-api.yml
@@ -17,7 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: cd into API
-        run: cd api
+        run: |
+          pwd
+          cd api
+          pwd
 
       - name: Set up Python version
         uses: actions/setup-python@v1
