--- a/.github/workflows/main_bonk-api.yml
+++ b/.github/workflows/main_bonk-api.yml
@@ -39,7 +39,11 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          pwd
+          ls
+          zip release.zip ./* -r
+          ls
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
