Fixing artifact upload path

--- a/.github/workflows/main_bonk-api.yml
+++ b/.github/workflows/main_bonk-api.yml
@@ -46,8 +46,8 @@ jobs:
         with:
           name: python-app
           path: |
-            release.zip
-            !venv/
+            ./api/release.zip
+            ./api/!venv/
 
   deploy:
     runs-on: ubuntu-latest
